grafana-loki-helm/grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loki-grafana
  namespace: loki
spec:
  ports:
  - name: http-grafana
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: loki
    app.kubernetes.io/name: grafana
  type: ClusterIP
