grafana-loki-helm/01-grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-loki
  namespace: loki
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/protocols: "http"
    konghq.com/strip-path: "false"
    konghq.com/preserve-host: "true"
    konghq.com/plugins: "grafana-cors"
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /loki
        pathType: Prefix
        backend:
          service:
            name: loki-grafana
            port:
              number: 3000
      - path: /loki/login
        pathType: Prefix
        backend:
          service:
            name: loki-grafana
            port:
              number: 3000
      - path: /loki/api
        pathType: Prefix
        backend:
          service:
            name: loki-grafana
            port:
              number: 3000
